--- a/app.json
+++ b/app.json
@@ -4,14 +4,16 @@
     "backgroundColor": "#f8f8f8"
   },
   "pages": [
+    "pages/index/index",
+    "pages/specialExhibition/specialExhibition",
     "pages/mine/mine",
-    "pages/detail/detail",
-    "pages/index/index"
+    "pages/search/search",
+    "pages/detail/detail"
   ],
   "tabBar": {
-    "color": "#666666",
+    "color": "#8A8A8A",
     "backgroundColor": "#ffffff",
-    "selectedColor": "#FF6699",
+    "selectedColor": "#C6A056",
     "borderStyle": "black",
     "list": [
       {
