--- a/project.config.json
+++ b/project.config.json
@@ -57,7 +57,8 @@
 					"id": 3,
 					"name": "详情页",
 					"pathName": "pages/detail/detail",
-					"query": "moneyCode=100003"
+					"query": "moneyCode=100003&IsShare=1",
+					"scene": "1001"
 				}
 			]
 		}
