--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.12.5",
     "element-ui": "^2.4.6",
+    "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
