--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
     "qs": "^6.5.2",
+    "video.js": "^7.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
