--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-md5": "^0.7.3",
     "qs": "^6.5.2",
     "video.js": "^7.6.0",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
