--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.12.5",
+    "clipboard": "^2.0.6",
     "element-ui": "^2.4.6",
     "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
