--- a/project.config.json
+++ b/project.config.json
@@ -77,7 +77,7 @@
         {
           "name": "子单元",
           "pathName": "pages/specialExhibition/specialExhibition",
-          "query": "id=10&themeName=金色符号",
+          "query": "id=10&themeName=中华人民共和国成立30周年纪念金币",
           "scene": null
         },
         {
